--- a/drivers/misc/mediatek/mach/Makefile
+++ b/drivers/misc/mediatek/mach/Makefile
@@ -1,3 +1,6 @@
+include $(srctree)/drivers/misc/mediatek/Makefile.custom
+
+obj-y   :=  pmic_drv.o
 obj-$(CONFIG_ARCH_MT6752) += $(subst ",,$(CONFIG_MTK_PLATFORM))/
 obj-$(CONFIG_ARCH_MT6595) += $(subst ",,$(CONFIG_MTK_PLATFORM))/
 obj-$(CONFIG_ARCH_MT6795) += $(subst ",,$(CONFIG_MTK_PLATFORM))/
